--- a/modmine/dbmodel/project.properties
+++ b/modmine/dbmodel/project.properties
@@ -5,7 +5,8 @@ objectstore.name = os.production
 model.name = genomic
 
 core.model.path = bio/core
-extra.model.paths.start = bio/core/genomic_additions.xml bio/sources/so/so_additions.xml
+extra.model.paths.start = bio/core/genomic_additions.xml bio/sources/so/so_additions.xml \
+   modmine/dbmodel/resources/modencode-metadata_additions.xml
 extra.model.paths.end = bio/core/shortcuts.xml
 
 # choose the intermine.properties file from $HOME:
