Added a noResults page in the webapp for the case when we want to go to a page that looks like the results page but we don't have a PagedTable.
Former-commit-id: 59d1cf3b1bf82e9498b60e59ab9c8517331d272b

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -13,6 +13,7 @@ menu.customQuery = QueryBuilder
 menu.templates = Templates
 menu.login = Log in
 menu.logout = Log out
+menu.noResults = No results
 
 header.search.pre = Search
 header.search.mid = for
@@ -418,6 +419,10 @@ results.lookup.wildcard.many = Wildcards matched multiple objects: {0}
 results.lookup.translated.one = One identifier matched a different type and has been converted to a {0}:{1}
 results.lookup.translated.many = Some identifiers matched different types and have been converted to {0}s:{1}
 results.lookup.in = IN {0}
+
+noResults.title = No results
+noResults.description = No query results
+noResults.tab = customQuery
 
 columnsummary.getsummary = Get Column Summary
 columnsummary.name = 
