--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -681,6 +681,7 @@ errors.query.objectstoreerror = The database was unable to complete the query \
 errors.query.badquery = Please select a Column to Display by clicking on a "Show" image below
 errors.query.estimatetimetoolong = The estimated time to complete your query is too long
 errors.export.nothingtoexport =Unable to find anything to export
+errors.export.exportfailed = Export failed. Please contact support.
 errors.like = Please supply a valid wildcard expression
 errors.emptyField = No input given, please supply a valid expression
 errors.createtemplate.blank = You cannot create a template with a blank name
