--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -682,6 +682,7 @@ errors.query.badquery = Please select a Column to Display by clicking on a "Show
 errors.query.estimatetimetoolong = The estimated time to complete your query is too long
 errors.export.nothingtoexport =Unable to find anything to export
 errors.export.exportfailed = Export failed. Please contact support.
+errors.export.displayonlyparameters = "{0}"
 errors.like = Please supply a valid wildcard expression
 errors.emptyField = No input given, please supply a valid expression
 errors.createtemplate.blank = You cannot create a template with a blank name
