replaced some apostrophes that javascript was unhappy with.
Former-commit-id: c0f6eabfcf9832607b7d79ff224c4ef440804409

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -164,7 +164,7 @@ query.export = This query as IQL
 query.import = Import query from XML...
 
  
-query.imported = Query(ies) imported successfully: '{0}'
+query.imported = Query(s) imported successfully: "{0}"
 query.save.msg = Enter a name below and click on the "Save query" button to save this query.  Please \
 note that query names may only contain letters, numbers, spaces, and underscores.
 query.or = OR
@@ -235,7 +235,7 @@ history.union = Union
 history.intersect = Intersect
 history.subtract = Subtract
 history.nohistory = No saved lists or saved queries
-history.baginuse = List '{0}' cannot be deleted as it is referenced by other queries {1}
+history.baginuse = List "{0}" cannot be deleted as it is referenced by other queries {1}
 history.intro = This page displays your list of saved lists and queries.  Click on a name to view or edit a list or query
 history.descriptionheader = Description
 history.titleheader = Title
@@ -596,12 +596,12 @@ login.needspassword = If you have forgotten your password, \
   enter your email address here your password will be emailed to you
 login.passwordrequest = Request password
 login.emptyusername = Please enter a username
-login.invalidusername = No user found for email address '{0}'
+login.invalidusername = No user found for email address "{0}"
 login.wrongpassword = Incorrect password: please try again
 login.invalidemail = Unable to send password: please check email address
-login.loggedin = Logged in as user '{0}'
+login.loggedin = Logged in as user "{0}"
 login.loggedout = You have logged out
-login.emailed = Your password has been sent to '{0}'
+login.emailed = Your password has been sent to "{0}"
 login.heading.password = Manage password
 login.tab = mymine
 login.renamedbags = Your list {0} was renamed to {1} because a list with that name already exists
@@ -617,7 +617,7 @@ createAccount.createAccount = Create Account
 createAccount.emptyusername = Please enter a username
 createAccount.emptypassword = Please enter a password
 createAccount.nomatchpass = Please make sure you typed twice the same password
-createAccount.userexists = Sorry, the user '{0}' is already registered. If you forgot your password, you can retrieve it using the login form, otherwise please provide another username
+createAccount.userexists = Sorry, the user "{0}" is already registered. If you forgot your password, you can retrieve it using the login form, otherwise please provide another username
 createAccount.badmail = Failed to send confirmation email.
 createAccount.tab = mymine
 createAccount.nonvalidemail = Please enter a valid email address 
@@ -634,7 +634,7 @@ password.changed = Your password was changed successfully
 password.emptyusername = Please enter a username
 password.emptypassword = Please enter a password
 password.nomatchpass = Please make sure you typed twice the same password
-password.usernotexist = The user '{0}' does not exit. Please make sure you enter a valid username
+password.usernotexist = The user "{0}" does not exist. Please make sure you enter a valid username
 password.wrongpass = The password provided is not valid
 
 # waiting page
@@ -694,14 +694,14 @@ errors.createtemplate.noconstraints = You need to include at least one editable 
 errors.template.incomplete = Loaded template is incomplete. Some fields were removed because weren't found in model. "{0}"
 errors.template.nosuchtemplate = No such template "{0}"
 errors.badtemplatexml = Error parsing template XML: {0}
-errors.importFailed = Import of query(ies) failed. Invalid format of query: '{0}'
+errors.importFailed = Import of query(ies) failed. Invalid format of query: "{0}"
 errors.importFailedException = Import of query(ies) failed. Invalid format of query or model of query is wrong or doesn't exist. 
 errors.importQuery.noqueries = No valid queries found
 errors.badportalquery = Bad link into InterMine
 errors.badportalclass = No class or wrong class specified
 errors.pollquery.badqid = I'm sorry, I can't find a running query with qid {0}
-errors.pollquery.emptyqid = No qid specified. (qid is '{0}')
-errors.pollquery.cancelled = Query cancelled (qid was '{0}')
+errors.pollquery.emptyqid = No qid specified. (qid is "{0}")
+errors.pollquery.cancelled = Query cancelled (qid was "{0}")
 errors.edittemplate.empty = No template attached to this query was found. Maybe it has been deleted from saved templates
 errors.modifyQuery.queryExists = An item with that name already exists
 errors.modifyTemplate.noselect = Please select some templates to Export
