added mechanism for selecting which widgets to display and to handle case when there is no results
Former-commit-id: 1e97412091d83879968d97854e89dcf4cdfc2ced

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -596,12 +596,12 @@ login.needspassword = If you have forgotten your password, \
   enter your email address here your password will be emailed to you
 login.passwordrequest = Request password
 login.emptyusername = Please enter a username
-login.invalidusername = No user found for email address "{0}"
+login.invalidusername = No user found for email address &quot;{0}&quot;
 login.wrongpassword = Incorrect password: please try again
 login.invalidemail = Unable to send password: please check email address
-login.loggedin = Logged in as user "{0}"
+login.loggedin = Logged in as user &quot;{0}&quot;
 login.loggedout = You have logged out
-login.emailed = Your password has been sent to "{0}"
+login.emailed = Your password has been sent to &quot;{0}&quot;
 login.heading.password = Manage password
 login.tab = mymine
 login.renamedbags = Your list {0} was renamed to {1} because a list with that name already exists
