Don't allow templates with non-editable LOOKUP constraints to be created.
Former-commit-id: 29313b0c678de7c317fb6fa73a8a3b70fba5ec08

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -691,6 +691,7 @@ errors.createtemplate.nothingeditable = You must specify at least one constraint
 errors.createtemplate.nooutputs = You need to choose at least one output field to create a template query
 errors.createtemplate.noconstraints = You need to include at least one editable constraint in your query to \
    create a template query. To make a constraint editable click the padlock icon next to the constraint
+errors.createtemplate.noneditablelookup = You cannot create a template with non-editable LOOKUP constraints
 errors.template.incomplete = Loaded template is incomplete. Some fields were removed because weren't found in model. "{0}"
 errors.template.nosuchtemplate = No such template "{0}"
 errors.badtemplatexml = Error parsing template XML: {0}
