Don't allow users to upload bags from files that contain nulls.
Former-commit-id: 0d2f8b93ddeb54944d9a6dd46498638e2f27d960

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -501,9 +501,10 @@ to perform set operations.  Click <a href="bag.do?subtab=upload">'Upload'</a> ab
 bagBuild.makeNewBag = Create a new list
 bagBuild.makeBag = Create List
 bagBuild.saved = List saved as "{0}" - new list contains {1} element(s)
+bagBuild.noBagType = You need to choose a type
 bagBuild.noBagPaste = You need to type in some identifiers
 bagBuild.noBagFile = You need to specify a file
-bagBuild.notText = {0} is an invalid file type.  File must be in plain text format.
+bagBuild.notText = {0} is an invalid file type - file must be in plain text format
 bagBuild.typeNotSet = Please choose a list type
 bagBuild.bagFormText1 = Select the type of list to create and either enter in a list of identifiers or \
    upload identifiers from a file.  A search will be performed for all the identifiers in your list.
