Enhanced ListService. Now accepts intermine object identifiers or object  public identifiers.
Former-commit-id: 9fc42af355c05b3ab9bf36ab199d7ea0ccf61c88

--- a/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/web.xml
@@ -80,7 +80,7 @@
 
   <servlet-mapping>
 	<servlet-name>ws-lists</servlet-name>
-	<url-pattern>/data/lists</url-pattern>
+	<url-pattern>/data/listswithobject</url-pattern>
   </servlet-mapping>
   
     <servlet>
