added new class file
Former-commit-id: ab350a9e6fba59d61e36f5c89de32f48bcda529a

--- a/unimine/webapp/resources/webapp/WEB-INF/class_keys.properties
+++ b/unimine/webapp/resources/webapp/WEB-INF/class_keys.properties
@@ -6,3 +6,5 @@ Gene = primaryIdentifier, symbol
 Protein = primaryAccession
 OntologyTerm = identifier, name
 Organism = name, taxonid
+
+PrideProject = title
