added new unimine widgets
Former-commit-id: 46cd95b6730416acf799ac61397a5eb1cf5de682

--- a/unimine/webapp/resources/web.properties
+++ b/unimine/webapp/resources/web.properties
@@ -2,6 +2,35 @@
 # The contents of this file are read into a Properties object that is stored
 # as the WEB_PROPERTIES attribute in the Context
 
+attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/?<<attributeValue>>
+attributelink.prideproj.PrideProject.*.title.text=FlyBase: <<attributeValue>>
+attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.png
+
+attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jpeg
+attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
+attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jpeg
+attributelink.interPro.ProteinDomain.*.primaryIdentifier.url= http://www.ebi.ac.uk/interpro/IEntry?ac=<<attributeValue>>
+attributelink.interPro.ProteinDomain.*.primaryIdentifier.text=InterPro: <<attributeValue>>
+
+attributelink.pdb.ProteinStructure.*.identifier.url=http://www.rcsb.org/pdb/explore.do?structureId=<<attributeValue>>
+attributelink.pdb.ProteinStructure.*.identifier.text=PDB: <<attributeValue>>
+attributelink.pdb.ProteinStructure.*.identifier.imageName=PDB_logo_mini.gif
+
+attributelink.KEGG.Pathway.*.identifier.url=http://www.genome.jp/dbget-bin/show_pathway?dme<<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.text=KEGG: <<attributeValue>>
+attributelink.KEGG.Pathway.*.identifier.imageName=KEGG_logo_mini.gif
+
+attributelink.NCBI.Organism.*.taxonId.url=http://www.ncbi.nlm.nih.gov/Taxonomy/Browser/wwwtax.cgi?id=<<attributeValue>>
+attributelink.NCBI.Organism.*.taxonId.text=NCBI Taxonomy Browser: <<attributeValue>>
+
+attributelink.redfly.CRM.*.secondaryIdentifier.url=http://redfly.ccr.buffalo.edu/?content=/view_detail.php&crm_id=<<attributeValue>>
+attributelink.redfly.CRM.*.secondaryIdentifier.text=REDfly Regulatory Element Database
+attributelink.redfly.TFBindingSite.*.secondaryIdentifier.url=http://redfly.ccr.buffalo.edu/?content=/view_detail.php&tfbs_id=<<attributeValue>>
+attributelink.redfly.TFBindingSite.*.secondaryIdentifier.text=REDfly Regulatory Element Database
+
 ensembl.Mus.musculus.url.prefix=http://www.ensembl.org/Mus_musculus/geneview?db=core&gene=
 ensembl.Drosophila.melanogaster.url.prefix=http://www.ensembl.org/Drosophila_melanogaster/geneview?db=core&gene=
 ensembl.Anopheles.gambiae.url.prefix=http://www.ensembl.org/Anopheles_gambiae/geneview?db=core&gene=
