--- a/intermine/web/test/project.properties
+++ b/intermine/web/test/project.properties
@@ -1,5 +1,7 @@
 compile.dependencies = intermine/web/main,\
-                       intermine/objectstore/test
+                       intermine/objectstore/test,\
+                       intermine/webtasks/main, \
+                       intermine/integrate/test
 
 instrument.path = ../main/dist/intermine-web.jar
 instrument.src.path = ../main/src
