--- a/unimine/webapp/resources/web.properties
+++ b/unimine/webapp/resources/web.properties
@@ -2,9 +2,9 @@
 # The contents of this file are read into a Properties object that is stored
 # as the WEB_PROPERTIES attribute in the Context
 
-attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/?<<attributeValue>>
-attributelink.prideproj.PrideProject.*.title.text=FlyBase: <<attributeValue>>
-attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.png
+attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/searchSummary.do?queryType=ExperimentCV&expCvAccession=PRIDE:0000097&expCvValue=<<attributeValue>>
+attributelink.prideproj.PrideProject.*.title.text=PrideProject: <<attributeValue>>
+attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.jpeg
 
 attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
 attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
