added new features
Former-commit-id: 2ac2d0aa010635c8f880108c69db03439c1631d2

--- a/unimine/webapp/resources/web.properties
+++ b/unimine/webapp/resources/web.properties
@@ -6,6 +6,10 @@ attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/sear
 attributelink.prideproj.PrideProject.*.title.text=PrideProject: <<attributeValue>>
 attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.jpeg
 
+attributelink.prideproj.PrideExperiment.*.accessionId.url=http://www.ebi.ac.uk/pride/directLink.do?experimentAccessionNumber=<<attributeValue>>
+attributelink.prideproj.PrideExperiment.*.accessionId.text=PrideExperiment: <<attributeValue>>
+attributelink.prideproj.PrideExperiment.*.accessionId.imageName=pride_logo_link.jpeg
+
 attributelink.uniProt.Protein.*.primaryIdentifier.url=http://www.uniprot.org/entry/<<attributeValue>>
 attributelink.uniProt.Protein.*.primaryIdentifier.text=uniprot: <<attributeValue>>
 attributelink.uniProt.Protein.*.primaryIdentifier.imageName=uniprot_logo_link.jpeg
