--- a/unimine/webapp/resources/web.properties
+++ b/unimine/webapp/resources/web.properties
@@ -6,6 +6,10 @@ attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/sear
 attributelink.prideproj.PrideProject.*.title.text=PrideProject: <<attributeValue>>
 attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.jpeg
 
+attributelink.dasty.Protein.*.primaryAccession.url=http://www.ebi.ac.uk/dasty/client/ebi.php?q=<<attributeValue>>&label=eProtein&t=3
+attributelink.dasty.Protein.*.primaryAccession.text=Dasty2: <<attributeValue>>
+attributelink.dasty.Protein.*.primaryAccession.imageName=dasty2_logo03s.gif
+
 attributelink.prideproj.PrideExperiment.*.accessionId.url=http://www.ebi.ac.uk/pride/directLink.do?experimentAccessionNumber=<<attributeValue>>
 attributelink.prideproj.PrideExperiment.*.accessionId.text=PrideExperiment: <<attributeValue>>
 attributelink.prideproj.PrideExperiment.*.accessionId.imageName=pride_logo_link.jpeg
