--- a/unimine/webapp/resources/web.properties
+++ b/unimine/webapp/resources/web.properties
@@ -2,13 +2,13 @@
 # The contents of this file are read into a Properties object that is stored
 # as the WEB_PROPERTIES attribute in the Context
 
-attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/searchSummary.do?queryType=ExperimentCV&expCvAccession=PRIDE:0000097&expCvValue=<<attributeValue>>
+attributelink.prideproj.PrideProject.*.title.url=http://www.ebi.ac.uk/pride/searchSummary.do?queryTypeSelected=ExperimentCV&experimentCvAccession=PRIDE:0000097&experimentCvValue=<<attributeValue>>&atKey[0]=cvName&atValue[0]=cvAccession
 attributelink.prideproj.PrideProject.*.title.text=PrideProject: <<attributeValue>>
 attributelink.prideproj.PrideProject.*.title.imageName=pride_logo_link.jpeg
 
 attributelink.dasty.Protein.*.primaryAccession.url=http://www.ebi.ac.uk/dasty/client/ebi.php?q=<<attributeValue>>&label=eProtein&t=3
 attributelink.dasty.Protein.*.primaryAccession.text=Dasty2: <<attributeValue>>
-attributelink.dasty.Protein.*.primaryAccession.imageName=dasty2_logo03s.gif
+attributelink.dasty.Protein.*.primaryAccession.imageName=dasty2_logo_link.gif
 
 attributelink.prideproj.PrideExperiment.*.accessionId.url=http://www.ebi.ac.uk/pride/directLink.do?experimentAccessionNumber=<<attributeValue>>
 attributelink.prideproj.PrideExperiment.*.accessionId.text=PrideExperiment: <<attributeValue>>
