--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -720,6 +720,7 @@ errors.range={0} is not in the range {1} through {2}
 errors.required={0} is required
 errors.email={0} is an invalid e-mail address
 errors.bag.empty = You didn't select any item. List is empty.
+errors.linkGenerationFailed = Link could not be created. {0}
 
 portal.nomatches = No matches found for {0}
 portal.duplicates = Found multiple entries for {0}
@@ -730,3 +731,7 @@ portal.orthologue.wrongparameter = {0} is not a valid Organism short name
 
 #obsolete?
 import.queries.notloggedin = Sorry you must be logged in to import more than one query
+
+#SERVICE LINK
+serviceLink.tab = templates
+serviceLink.title = Service link
