--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -693,6 +693,8 @@ errors.createtemplate.nooutputs = You need to choose at least one output field t
 errors.createtemplate.noconstraints = You need to include at least one editable constraint in your query to \
    create a template query. To make a constraint editable click the padlock icon next to the constraint
 errors.createtemplate.noneditablelookup = You cannot create a template with non-editable LOOKUP constraints
+errors.createtemplate.templatewithlist =  You cannot create a template with list, \
+list constraint is added automatically, when you run template and you have list of appropriate type 
 errors.template.incomplete = Loaded template is incomplete. Some fields were removed because weren't found in model. "{0}"
 errors.template.nosuchtemplate = No such template "{0}"
 errors.badtemplatexml = Error parsing template XML: {0}
