Fixed news list on modmine front page.
Former-commit-id: f325e4a5cfe31431a7bc3d86991711ece3e4648f

--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -131,7 +131,8 @@ attributelink.redfly.TFBindingSite.*.primaryIdentifier.url=http://redfly.ccr.buf
 attributelink.redfly.TFBindingSite.*.primaryIdentifier.text=Further details from the REDfly Regulatory Element Database
 
 # home page
-begin.intro = Welcome to modENCODE-mine
+begin.news.1 = Release 3 contains fixes for the <i>C.elegans</i> gene data
+begin.news.2 = <i>Drosophila</i> genome data updated to version FB2008_03
 begin.query.classes = Gene, Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
