Fixed news list on modmine front page.
Former-commit-id: 2172ea3f17e548180cc8021130a7bb1928bc4ada

--- a/modmine/webapp/resources/web.properties
+++ b/modmine/webapp/resources/web.properties
@@ -131,8 +131,8 @@ attributelink.redfly.TFBindingSite.*.primaryIdentifier.url=http://redfly.ccr.buf
 attributelink.redfly.TFBindingSite.*.primaryIdentifier.text=Further details from the REDfly Regulatory Element Database
 
 # home page
-begin.news.1 = Release 3 contains fixes for the <i>C.elegans</i> gene data
-begin.news.2 = <i>Drosophila</i> genome data updated to version FB2008_03
+begin.news.1 = Release 3 contains fixes for the <i>C.elegans</i> gene data and the <i>Drosophila</i> genome data is updated to FlyBase version FB2008_03 
+begin.news.2 = <a href="/what.shtml">What is modENCODE-mine?</a>
 begin.query.classes = Gene, Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
