Added a search box on the list details page to search for an object in the list. Refs #1662.
Former-commit-id: 5917ee616f3559d44c7b57f8990c776391c3ff4e

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -464,6 +464,7 @@ bagDetails.widgetHelpGraph = bars of the graphs
 bagDetails.widgetHelpTable = links in tables
 bagDetails.templatesHelp = The template queries below have been executed for this list.  Use \
 {0} to view or hide the templates.
+bagDetails.findInList = Find in list:
 
 bag.title = Lists
 bag.description = Lists
