Added test for template result service and fixed TemplateConfigurator.
Former-commit-id: f63eae97f4040391b6bdec1691241810f30bb0f6

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -724,6 +724,7 @@ errors.required={0} is required
 errors.email={0} is an invalid e-mail address
 errors.bag.empty = You didn't select any item. List is empty.
 errors.linkGenerationFailed = Link could not be created. {0}
+errors.message = {0}
 
 portal.nomatches = No matches found for {0}
 portal.duplicates = Found multiple entries for {0}
@@ -738,3 +739,4 @@ import.queries.notloggedin = Sorry you must be logged in to import more than one
 #SERVICE LINK
 serviceLink.tab = templates
 serviceLink.title = Service link
+
