Outer joins are in the trunk - partly. Not in the query builder yet
Former-commit-id: 07f7c36f0e7f3f361b1ee2afc536a762bc3fd0fa

--- a/testmodel/dbmodel/build.xml
+++ b/testmodel/dbmodel/build.xml
@@ -14,7 +14,7 @@
   <target name="insert-data-unittest" depends="build-db">
     <!-- Invalidate (delete) summary properties -->
     <delete file="${objectstoresummary.properties}"/>
-    <insert-xml-data integrationWriter="integration.unittestsingle"
+    <insert-xml-data integrationWriter="integration.unittestmulti"
                      xmlResource="testmodel_data.xml"
                      sourceName="testsource"/>
   </target>
