--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -484,6 +484,7 @@ bag.save.msg = Enter a name in the form below and press 'Submit' to save \
   the selected results into a list. Please note that list names may not contain special characters.
 bag.moreThanOneType = The list and the selected results are different types.  Try to save as \
 a new list.
+bag.createdlists = Created lists {0}.
 
 
 bags.title = Lists
@@ -725,6 +726,10 @@ errors.email={0} is an invalid e-mail address
 errors.bag.empty = You didn't select any item. List is empty.
 errors.linkGenerationFailed = Link could not be created. {0}
 errors.message = {0}
+errors.bag.listnotselected = You didn't select any list.
+errors.bag.namecannotbespecified = "You can not specify name of copy of list if you selected more lists. Names will be generate automatically."
+errors.bag.notfound = List was not found. Please reload page and try it again. 
+errors.bag.alreadyexist = List {0} not created. List already exists.
 
 portal.nomatches = No matches found for {0}
 portal.duplicates = Found multiple entries for {0}
