Add Allele and PhenotypeAnnotation classes. Get basic allele and phenotype information from FlyBase chado. Refs #889.
Former-commit-id: 80e85da45bb932142e40082dd3921ecccce0a857

--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -5,6 +5,8 @@ org.flymine.model.genomic.DataSource.fields = name
 org.flymine.model.genomic.GOAnnotation.fields = qualifier
 org.flymine.model.genomic.GOEvidenceCode.fields = code
 org.flymine.model.genomic.InfoSource.fields = title
+org.flymine.model.genomic.Phenotype.fields = name identifier
+org.flymine.model.genomic.PhenotypeAnnotation.fields = annotationType
 org.flymine.model.genomic.Location.fields = endPhase phase strand
 org.flymine.model.genomic.OntologyRelation.fields = type
 org.flymine.model.genomic.Organism.fields = abbreviation genus name name genus shortName shortName species taxonId
