--- a/unimine/dbmodel/resources/objectstoresummary.config.properties
+++ b/unimine/dbmodel/resources/objectstoresummary.config.properties
@@ -5,3 +5,6 @@ org.flymine.model.genomic.InfoSource.fields = title
 org.flymine.model.genomic.Location.fields = endPhase phase strand
 org.flymine.model.genomic.Organism.fields = abbreviation genus name name genus shortName shortName species taxonId
 org.flymine.model.genomic.Synonym.fields = type
+org.flymine.model.genomic.PrideProject.fields = title
+org.flymine.model.genomic.Protein.automcomplete = primaryAccession
+org.flymine.model.genomic.ProteinStructure.fields = technique
