--- a/modmine/dbmodel/resources/objectstoresummary.config.properties
+++ b/modmine/dbmodel/resources/objectstoresummary.config.properties
@@ -5,7 +5,9 @@ org.flymine.model.genomic.DataSource.fields = name
 org.flymine.model.genomic.GOAnnotation.fields = qualifier
 org.flymine.model.genomic.GOEvidenceCode.fields = code
 org.flymine.model.genomic.InfoSource.fields = title
-org.flymine.model.genomic.Phenotype.fields = name identifier
+org.flymine.model.genomic.AnatomyTerm.fields = name identifier
+org.flymine.model.genomic.DevelopmentTerm.fields = name identifier
+org.flymine.model.genomic.CVTerm.fields = name identifier
 org.flymine.model.genomic.PhenotypeAnnotation.fields = annotationType
 org.flymine.model.genomic.Location.fields = endPhase phase strand
 org.flymine.model.genomic.OntologyRelation.fields = type
