Change "Go" button to "Find" on list page. Refs #1662.
Former-commit-id: d8ee52de52cc691c32776b4ef680996bafd17d14

--- a/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
+++ b/intermine/webapp/main/resources/webapp/WEB-INF/classes/InterMineWebApp.properties
@@ -464,7 +464,7 @@ bagDetails.widgetHelpGraph = bars of the graphs
 bagDetails.widgetHelpTable = links in tables
 bagDetails.templatesHelp = The template queries below have been executed for this list.  Use \
 {0} to view or hide the templates.
-bagDetails.findInList = Find in list:
+bagDetails.findInList = Find
 
 bag.title = Lists
 bag.description = Lists
@@ -485,7 +485,6 @@ bag.save.msg = Enter a name in the form below and press 'Submit' to save \
 bag.moreThanOneType = The list and the selected results are different types.  Try to save as \
 a new list.
 bag.createdlists = Created lists {0}.
-
 
 bags.title = Lists
 bags.description = Lists
