--- a/testmodel/dbmodel/resources/modelUpdate.properties
+++ b/testmodel/dbmodel/resources/modelUpdate.properties
@@ -1,7 +1,10 @@
 Address=delete
-#CEOTest=rename-CEO 
+#CEOTest=rename-CEO
+#CEOTest.sal=rename-CEO.salary
+#OR
+#make an example with a renamed field that is attribute of a renamed class
+CEOTest.sal=rename-CEO.salary
+
 #if a user changes the reference name following a class renaming, the user has to specify this change
 Company.CEOTest=rename-Company.CEO
-#make an example with a renamed field that is attribute of a renamed class
-CEOTest.sal= rename-CEO.salary
-#Company.vat=rename-Company.vatNumber
+
