Added widgets to test-model for testing
Former-commit-id: 9f8d8f10a0f00e26a0d936180697223c5e6ad07e

--- a/testmodel/webapp/main/.classpath
+++ b/testmodel/webapp/main/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-web"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-objectstore-main"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/intermine-api-main"/>
+	<classpathentry kind="lib" path="/intermine-web/lib/jfreechart-1.0.6.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
