PlantMine webapp config.
Former-commit-id: 8aa6a3e38cf8352887f684e034cb9e2890c19bdc

--- a/plantmine/webapp/resources/web.properties
+++ b/plantmine/webapp/resources/web.properties
@@ -9,10 +9,10 @@ begin.query.classes = Gene,Protein
 begin.browse.template=A_IdentifierSynonym_Object
 
 # list upload example
-bag.example.identifiers=PFL2660w,gene.34588,VAR,TPI
+bag.example.identifiers=PAD4,NIH,STN1,AT1G07640,837382,BEE1
 
 # quicksearch examples
-quickSearch.identifiers = e.g example identifier
+quickSearch.identifiers = e.g PAD4, BEE1_ARATH
 quickSearch.templates = e.g. example template name
 quickSearch.lists = e.g. example list name
 
@@ -43,7 +43,7 @@ layout.fixed = begin,template,templates,bag,customQuery,query
 theme = green
 
 
-# Header - these will populate the top right navigation 
+# Header - these will populate the top right navigation
 #header.links=help,FAQ,about,cite,software
 #header.links.FAQ=http://trac.flymine.org/wiki/FlyMineFAQ
 #header.links.about=http://blog.flymine.org/?page_id=35
